{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 40,
  "lineage": "7c1a564d-c1ca-a3a7-e14d-d96aa408788b",
  "resources": [
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "master",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c333fea9-8655-403f-acaf-a98193165b35/resourceGroups/default/providers/Microsoft.Network/networkInterfaces/default-master-nic",
            "ip_configuration": [
              {
                "name": "default-master",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c333fea9-8655-403f-acaf-a98193165b35/resourceGroups/default/providers/Microsoft.Network/publicIPAddresses/default-master-pip",
                "subnet_id": "/subscriptions/c333fea9-8655-403f-acaf-a98193165b35/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-vnet/subnets/internal"
              }
            ],
            "location": "uksouth",
            "name": "default-master-nic",
            "network_security_group_id": "/subscriptions/c333fea9-8655-403f-acaf-a98193165b35/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/master-nsg",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "default"
          },
          "dependencies": [
            "azurerm_resource_group.default",
            "azurerm_virtual_network.default",
            "module.master.azurerm_network_security_group.master",
            "module.master.azurerm_public_ip.master",
            "module.master.azurerm_subnet.default"
          ]
        }
      ]
    },
    {
      "module": "module.worker",
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "worker",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/c333fea9-8655-403f-acaf-a98193165b35/resourceGroups/default/providers/Microsoft.Network/networkInterfaces/default-worker-nic",
            "ip_configuration": [
              {
                "name": "default-worker",
                "primary": true,
                "private_ip_address_allocation": "dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/c333fea9-8655-403f-acaf-a98193165b35/resourceGroups/default/providers/Microsoft.Network/publicIPAddresses/default-worker-pip",
                "subnet_id": "/subscriptions/c333fea9-8655-403f-acaf-a98193165b35/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-vnet/subnets/internal"
              }
            ],
            "location": "uksouth",
            "name": "default-worker-nic",
            "network_security_group_id": "/subscriptions/c333fea9-8655-403f-acaf-a98193165b35/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/worker-nsg",
            "private_ip_address": "10.0.2.5",
            "private_ip_addresses": [
              "10.0.2.5"
            ],
            "resource_group_name": "default"
          },
          "dependencies": [
            "azurerm_resource_group.default",
            "azurerm_virtual_network.default",
            "module.worker.azurerm_network_security_group.worker",
            "module.worker.azurerm_public_ip.worker",
            "module.worker.azurerm_subnet.default"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "master",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c333fea9-8655-403f-acaf-a98193165b35/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/master-nsg",
            "location": "uksouth",
            "name": "master-nsg",
            "resource_group_name": "default",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.worker",
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "worker",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/c333fea9-8655-403f-acaf-a98193165b35/resourceGroups/default/providers/Microsoft.Network/networkSecurityGroups/worker-nsg",
            "location": "uksouth",
            "name": "worker-nsg",
            "resource_group_name": "default",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "SSH",
                "priority": 1001,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "HTTP",
                "priority": 1002,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "dependencies": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "master",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "default-master-matt-crutchley",
            "fqdn": "default-master-matt-crutchley.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/c333fea9-8655-403f-acaf-a98193165b35/resourceGroups/default/providers/Microsoft.Network/publicIPAddresses/default-master-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "default-master-pip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "default",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.worker",
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "worker",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "default-worker-matt-crutchley",
            "fqdn": "default-worker-matt-crutchley.uksouth.cloudapp.azure.com",
            "id": "/subscriptions/c333fea9-8655-403f-acaf-a98193165b35/resourceGroups/default/providers/Microsoft.Network/publicIPAddresses/default-worker-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "uksouth",
            "name": "default-worker-pip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "default",
            "sku": "Basic"
          },
          "dependencies": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    },
    {
      "module": "module.worker",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "id": "/subscriptions/c333fea9-8655-403f-acaf-a98193165b35/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-vnet/subnets/internal",
            "name": "internal",
            "resource_group_name": "default",
            "virtual_network_name": "default-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.default",
            "azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "module": "module.master",
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "default",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "id": "/subscriptions/c333fea9-8655-403f-acaf-a98193165b35/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-vnet/subnets/internal",
            "name": "internal",
            "resource_group_name": "default",
            "virtual_network_name": "default-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.default",
            "azurerm_virtual_network.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "default",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/c333fea9-8655-403f-acaf-a98193165b35/resourceGroups/default/providers/Microsoft.Network/virtualNetworks/default-vnet",
            "location": "uksouth",
            "name": "default-vnet",
            "resource_group_name": "default"
          },
          "dependencies": [
            "azurerm_resource_group.default"
          ]
        }
      ]
    }
  ]
}